[project]
name = "wat-inspector"
version = "0.4.3"  # should be in sync with wat/version.py
description = "Deep inspection of Python objects"
license = {text = "MIT"}
authors = [
    { name = "igrek51", email = "igrek51.dev@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/igrek51/wat"


[build-system]
requires = ["setuptools", "build", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["wat*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["wat.inspection.insta.*"]  # exclude packages matching these glob patterns
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)
